Avoid import that checkstyle considers illegal
I also created a new subfolder under test/witness now where we can
store all files that tests related to witnesses need. As far as I
can see we also do not seem to have tests for the graphml witness
parsing yet.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@40867 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c